Bill section created and make changes in back end for bill section aS WELL Some security for testing